--- a/style.css
+++ b/style.css
@@ -53,3 +53,11 @@ h1{ text-align: center;}
     : 10%;
     margin: 30px;
 }
+.kaf img{
+    width: 50%;
+
+}
+.kaf{
+    width: 50%;
+    padding-left: 10%;
+}
