--- a/style.css
+++ b/style.css
@@ -60,4 +60,27 @@ h1{ text-align: center;}
 .kaf{
     width: 50%;
     padding-left: 10%;
+    
 }
+#koo{background-color: burlywood;
+
+}
+.go{text-align: center;
+    background-color: black;
+    color: white;
+    
+
+}
+.hi{
+    color: red;
+}
+    
+
+    
+
+    
+
+    
+    
+
+    
